src/style.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: 'Nanum Gothic', sans-serif;
}

h1, h2 {
  margin: 0;
}

.header-title {
  font-family: 'Gaegu', cursive;
  text-align: center;
  margin-top: 20px;
  font-size: 60px;
}

.home-container {
  display: flex;
  flex-direction: column;
  margin: 20px;
}

.products-container {
  display: flex;
  margin-bottom: 20px;
  background-color: beige;
  border-radius: 8px;
  font-size: 1.2rem;
}

.product-image {
  width: 220px;
  margin-right: 14px;
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}

.product-lists {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  column-gap: 20px;
}

.change-data-buttons {
  display: flex;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.change-data-buttons > button {
  font-size: 30px;
  font-family: 'Nanum Gothic';
  border: none;
  background-color: orange;
  border-radius: 4px;
  padding: 10px;
  cursor: pointer;
}

.add-item {
  margin-right: 20px;
}

/* Form 시작 */

.form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.form-global-title {
  margin-bottom: 15px;
}

.form-inputs-container {
  width: 400px;
  padding: 10px 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 20px;
  background-color:pink;
}

.form-input-wrapper {
  width: 100%;
  padding: 10px;
  display: flex;
  justify-content: space-between;
}

.form input {
  padding: 1px 2px;
  border-radius: 4px;
  margin-left: 5px;
  border: 1px solid gray;
}

.form input:focus {
  border: 1px solid orange; /*왜 적용이 안 되지?*/
}

